--- a/album-wordle/src/App.css
+++ b/album-wordle/src/App.css
@@ -3,6 +3,7 @@
   --text-color: black;
   --button-color: black;
   --button-text: white;
+  --wrong-color: #787C7E;
 }
 
 .dark-mode {
@@ -10,6 +11,7 @@
   --text-color: white;
   --button-color: rgb(255, 255, 255);
   --button-text: rgb(0, 0, 0);
+  --wrong-color: #3a3a3C;
 }
 
 body {
@@ -49,9 +51,9 @@ body {
   width: 50px;
   height: 50px;
   border: 2px solid #999;
-  margin-right: 10px;
-  margin-left: 10px;
-  margin-bottom: 20px;
+  margin-right: 7px;
+  margin-left: 7px;
+  margin-bottom: 14px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,21 +67,21 @@ body {
 .square.correct {
   background-color: #6AAA64;
   border: 2px solid #6AAA64;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.4s ease;
   color: white;
 }
 
 .square.wrong {
-  background-color: #3a3a3c;
-  border: 2px solid #3a3a3c;
-  transition: background-color 0.3s ease;
+  background-color: var(--wrong-color);
+  border: 2px solid var(--wrong-color);
+  transition: background-color 0.4s ease;
   color: white;
 }
 
 .square.partial {
   background-color: #B59f3b;
   border: 2px solid #B59f3b;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.4s ease;
   color: white;
 }
 
@@ -89,15 +91,15 @@ body {
 }
 
 .row2 .key {
-  width: 40px;
+  width: 38px;
 }
 
 .row3 .key {
-  width: 46px;
+  width: 40px;
 }
 
 .key {
-  width: 33px;
+  width: 36px;
   height: 50px;
   background-color: #999;
   border-radius: 5px;
@@ -111,6 +113,18 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+}
+
+.key.correct {
+  background-color: #6AAA64;
+}
+
+.key.partial {
+  background-color: #B59f3b;
+}
+
+.key.wrong {
+  background-color: var(--wrong-color);
 }
 
 .key:hover {
