--- a/album-wordle/src/App.css
+++ b/album-wordle/src/App.css
@@ -17,7 +17,7 @@
 body {
   background-color: var(--background-color);
   color: var(--text-color);
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 }
 
 .header {
@@ -62,6 +62,12 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+}
+
+.square.symbol {
+  border: none;
+  width: 54px;
+  height: 54px;
 }
 
 .square.correct {
@@ -141,4 +147,13 @@ body {
   position: absolute;
   bottom: 40px;
   width: 100%
+}
+
+.modal-container {
+  position: absolute;
+  top: 100px;
+  background-color: var(--background-color);
+  width: 100px;
+  height: 100px;
+  border: 2px solid black;
 }
