--- a/album-wordle/src/App.css
+++ b/album-wordle/src/App.css
@@ -119,6 +119,7 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  transition: background-color 0.3s ease;
 }
 
 .key.correct {
@@ -151,9 +152,47 @@ body {
 
 .modal-container {
   position: absolute;
+  opacity: 0;
   top: 100px;
   background-color: var(--background-color);
-  width: 100px;
-  height: 100px;
   border: 2px solid black;
+  min-width: 500px;
+}
+
+.modal-container.shown {
+  opacity: 100;
+}
+
+.modal-container h1 {
+  margin: 0;
+  padding: 10px 20px;
+  text-align: center;
+  color: white;
+}
+
+.modal-container .correct {
+  background-color: #6AAA64;
+}
+
+.modal-container .wrong {
+  background-color: #f53636;
+}
+
+.modal-body {
+  margin-bottom: 15px;
+  margin: 10px;
+}
+
+.reset-btn {
+  margin: 10px;
+  padding: 5px 10px;
+  background-color: var(--button-color);
+  color: var(--button-text);
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.reset-btn:hover {
+  transform: scale(1.2);
 }
